hard-gists/dfca335e370a2bc3bc79876e6270099e/run.log
=== Docker Run Log for dfca335e370a2bc3bc79876e6270099e ===
Started at: Mi 29. Okt 20:37:46 CET 2025

[2025-10-29 20:37:47] START: Running container for dfca335e370a2bc3bc79876e6270099e
[2025-10-29 20:37:47] SUCCESS: Container c3e7894f6b916f51b5d703c469629d2ebc62c9536a458fd82d292ee1dc892e72 started for dfca335e370a2bc3bc79876e6270099e
=== Container logs for dfca335e370a2bc3bc79876e6270099e ===
  File "/snippet.py", line 52
    print output
    ^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for dfca335e370a2bc3bc79876e6270099e ===
[2025-10-29 20:37:49] INFO: Container c3e7894f6b916f51b5d703c469629d2ebc62c9536a458fd82d292ee1dc892e72 has stopped
